Add dashboard layout with course and account settings

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>DTech - Mon Dashboard</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header>
+    <div class="logo"><h1>DTech</h1></div>
+    <nav>
+        <a href="index.html">Accueil</a>
+        <a href="cours.html">Cours</a>
+        <a href="blog.html">Blog</a>
+        <a href="boutique.html">Boutique</a>
+        <a href="a-propos.html">À propos</a>
+        <a href="contact.html">Contact</a>
+        <a href="dashboard.html">Connexion</a>
+    </nav>
+</header>
+
+<section class="dashboard">
+    <h2 style="text-align:center; margin-bottom:30px;">Mon Dashboard</h2>
+
+    <h3>Mes cours en cours :</h3>
+    <div class="grid">
+        <div class="cours-card">
+            <h4>Marketing Digital</h4>
+            <p>Progression : 40%</p>
+        </div>
+        <div class="cours-card">
+            <h4>Développement Web</h4>
+            <p>Progression : 20%</p>
+        </div>
+    </div>
+
+    <h3 style="margin-top:40px;">Certificats obtenus :</h3>
+    <div class="grid">
+        <div class="cours-card">
+            <h4>Marketing Digital - Débutant</h4>
+            <p>Certificat obtenu le 18/10/2025</p>
+        </div>
+    </div>
+
+    <h3 style="margin-top:40px;">Paramètres du compte :</h3>
+    <form style="max-width:600px; margin:auto; display:flex; flex-direction:column; gap:15px;">
+        <input type="text" placeholder="Nom complet" value="Claude Ulaluka" required>
+        <input type="email" placeholder="Email" value="dtech00243@gmail.com" required>
+        <input type="password" placeholder="Mot de passe">
+        <button type="submit">Mettre à jour</button>
+    </form>
+</section>
+
+<footer>
+    <p>&copy; 2025 DTech. Tous droits réservés.</p>
+</footer>
+</body>
+</html>
 
