Add initial HTML structure for DTech website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>DTech - Apprenez le digital</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="logo"><h1>DTech</h1></div>
+        <nav>
+            <a href="index.html">Accueil</a>
+            <a href="cours.html">Cours</a>
+            <a href="blog.html">Blog</a>
+            <a href="boutique.html">Boutique</a>
+            <a href="a-propos.html">À propos</a>
+            <a href="contact.html">Contact</a>
+            <a href="dashboard.html">Connexion</a>
+        </nav>
+    </header>
+
+    <section class="section" id="hero" style="background-color:#F4F4F4; text-align:center;">
+        <h2>Apprenez le digital avec DTech, à votre rythme !</h2>
+        <p>Formations en marketing, informatique, entrepreneuriat et plus.</p>
+        <button>Commencez un cours</button>
+    </section>
+
+    <section class="section" id="cours-populaires">
+        <h2 style="text-align:center; margin-bottom:30px;">Cours populaires</h2>
+        <div class="grid">
+            <div class="cours-card">
+                <h3>Marketing Digital</h3>
+                <p>Apprenez à attirer vos clients en ligne.</p>
+                <button>Voir le cours</button>
+            </div>
+            <div class="cours-card">
+                <h3>Développement Web</h3>
+                <p>Créez votre site web de A à Z.</p>
+                <button>Voir le cours</button>
+            </div>
+            <div class="cours-card">
+                <h3>Trading Crypto</h3>
+                <p>Découvrez les bases du trading sur Binance.</p>
+                <button>Voir le cours</button>
+            </div>
+        </div>
+    </section>
+
+    <section class="section" id="pourquoi-dtech" style="background-color:#F4F4F4; text-align:center;">
+        <h2>Pourquoi choisir DTech ?</h2>
+        <p>Contenu de qualité, certifié, flexible et accessible à tous.</p>
+    </section>
+
+    <section class="section" id="temoignages" style="text-align:center;">
+        <h2>Témoignages</h2>
+        <p>"Les cours de DTech m'ont aidé à lancer mon entreprise digitale !" - Jean M.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 DTech. Tous droits réservés.</p>
+    </footer>
+</body>
+</html>
 
