Add course catalog to cours.html

--- a/cours.html
+++ b/cours.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>DTech - Tous les cours</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header>
+    <div class="logo"><h1>DTech</h1></div>
+    <nav>
+        <a href="index.html">Accueil</a>
+        <a href="cours.html">Cours</a>
+        <a href="blog.html">Blog</a>
+        <a href="boutique.html">Boutique</a>
+        <a href="a-propos.html">À propos</a>
+        <a href="contact.html">Contact</a>
+        <a href="dashboard.html">Connexion</a>
+    </nav>
+</header>
+
+<section class="section">
+    <h2 style="text-align:center; margin-bottom:30px;">Catalogue des cours</h2>
+    <div class="grid">
+        <div class="cours-card">
+            <h3>Marketing Digital</h3>
+            <p>Apprenez à attirer vos clients en ligne.</p>
+            <button onclick="window.location.href='cours-detail.html'">Voir le cours</button>
+        </div>
+        <div class="cours-card">
+            <h3>Développement Web</h3>
+            <p>Créez votre site web de A à Z.</p>
+            <button onclick="window.location.href='cours-detail.html'">Voir le cours</button>
+        </div>
+        <div class="cours-card">
+            <h3>Trading Crypto</h3>
+            <p>Découvrez les bases du trading sur Binance.</p>
+            <button onclick="window.location.href='cours-detail.html'">Voir le cours</button>
+        </div>
+        <div class="cours-card">
+            <h3>IA et ChatGPT</h3>
+            <p>Apprenez à utiliser l’intelligence artificielle pour votre business.</p>
+            <button onclick="window.location.href='cours-detail.html'">Voir le cours</button>
+        </div>
+    </div>
+</section>
+
+<footer>
+    <p>&copy; 2025 DTech. Tous droits réservés.</p>
+</footer>
+</body>
+</html>
 
