--- a/a-propos.html
+++ b/a-propos.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>DTech - À propos</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header>
+    <div class="logo"><h1>DTech</h1></div>
+    <nav>
+        <a href="index.html">Accueil</a>
+        <a href="cours.html">Cours</a>
+        <a href="blog.html">Blog</a>
+        <a href="boutique.html">Boutique</a>
+        <a href="a-propos.html">À propos</a>
+        <a href="contact.html">Contact</a>
+        <a href="dashboard.html">Connexion</a>
+    </nav>
+</header>
+
+<section class="section">
+    <h2 style="text-align:center; margin-bottom:30px;">À propos de DTech</h2>
+    <p style="text-align:center; max-width:800px; margin:auto;">
+        DTech est une plateforme dédiée à la formation digitale et à l’entrepreneuriat. 
+        Nous proposons des cours en marketing digital, développement web, trading, intelligence artificielle et bien plus. 
+        Notre objectif est de rendre l’apprentissage accessible à tous et de permettre à chacun de développer ses compétences pour réussir dans le monde numérique.
+    </p>
+
+    <h3 style="text-align:center; margin-top:40px;">Notre équipe</h3>
+    <div class="grid">
+        <div class="cours-card">
+            <h4>Claude Ulaluka</h4>
+            <p>Fondateur & Formateur Principal - Expert en marketing digital et technologie.</p>
+        </div>
+        <div class="cours-card">
+            <h4>Jane Doe</h4>
+            <p>Développement Web - Création de sites et applications modernes.</p>
+        </div>
+        <div class="cours-card">
+            <h4>John Smith</h4>
+            <p>Trading & Finance - Expert en crypto et marchés financiers.</p>
+        </div>
+    </div>
+</section>
+
+<footer>
+    <p>&copy; 2025 DTech. Tous droits réservés.</p>
+</footer>
+</body>
+</html>
 
