Add boutique.html for DTech online store

--- a/boutique.html
+++ b/boutique.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>DTech - Boutique</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header>
+    <div class="logo"><h1>DTech</h1></div>
+    <nav>
+        <a href="index.html">Accueil</a>
+        <a href="cours.html">Cours</a>
+        <a href="blog.html">Blog</a>
+        <a href="boutique.html">Boutique</a>
+        <a href="a-propos.html">À propos</a>
+        <a href="contact.html">Contact</a>
+        <a href="dashboard.html">Connexion</a>
+    </nav>
+</header>
+
+<section class="section">
+    <h2 style="text-align:center; margin-bottom:30px;">Boutique DTech</h2>
+    <div class="grid">
+        <div class="cours-card">
+            <h3>eBook Marketing Digital</h3>
+            <p>Apprenez toutes les stratégies marketing pour attirer des clients.</p>
+            <p>Prix : 15 USD</p>
+            <button>Acheter maintenant</button>
+        </div>
+        <div class="cours-card">
+            <h3>Template site web</h3>
+            <p>Un template prêt à l’emploi pour créer votre site professionnel.</p>
+            <p>Prix : 20 USD</p>
+            <button>Acheter maintenant</button>
+        </div>
+        <div class="cours-card">
+            <h3>Formation trading crypto</h3>
+            <p>Maîtrisez les bases du trading sur Binance et autres plateformes.</p>
+            <p>Prix : 30 USD</p>
+            <button>Acheter maintenant</button>
+        </div>
+    </div>
+</section>
+
+<footer>
+    <p>&copy; 2025 DTech. Tous droits réservés.</p>
+</footer>
+</body>
+</html>
 
