--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>DTech - Contact</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header>
+    <div class="logo"><h1>DTech</h1></div>
+    <nav>
+        <a href="index.html">Accueil</a>
+        <a href="cours.html">Cours</a>
+        <a href="blog.html">Blog</a>
+        <a href="boutique.html">Boutique</a>
+        <a href="a-propos.html">À propos</a>
+        <a href="contact.html">Contact</a>
+        <a href="dashboard.html">Connexion</a>
+    </nav>
+</header>
+
+<section class="section">
+    <h2 style="text-align:center; margin-bottom:30px;">Contactez-nous</h2>
+    <p style="text-align:center;">Pour toute question ou information, envoyez-nous un message :</p>
+    
+    <form style="max-width:600px; margin:auto; display:flex; flex-direction:column; gap:15px;">
+        <input type="text" placeholder="Nom complet" required>
+        <input type="email" placeholder="Adresse e-mail" required>
+        <input type="text" placeholder="Sujet" required>
+        <textarea placeholder="Votre message" rows="5" required></textarea>
+        <button type="submit">Envoyer</button>
+    </form>
+
+    <h3 style="text-align:center; margin-top:40px;">Autres contacts</h3>
+    <p style="text-align:center;">
+        Email: dtech00243@gmail.com | WhatsApp: +243 818 238 660
+    </p>
+</section>
+
+<footer>
+    <p>&copy; 2025 DTech. Tous droits réservés.</p>
+</footer>
+</body>
+</html>
 
