--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>DTech - Blog</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header>
+    <div class="logo"><h1>DTech</h1></div>
+    <nav>
+        <a href="index.html">Accueil</a>
+        <a href="cours.html">Cours</a>
+        <a href="blog.html">Blog</a>
+        <a href="boutique.html">Boutique</a>
+        <a href="a-propos.html">À propos</a>
+        <a href="contact.html">Contact</a>
+        <a href="dashboard.html">Connexion</a>
+    </nav>
+</header>
+
+<section class="section">
+    <h2 style="text-align:center; margin-bottom:30px;">Articles récents</h2>
+    <div class="grid">
+        <div class="cours-card">
+            <h3>5 astuces pour réussir sur Instagram</h3>
+            <p>Découvrez comment booster votre présence en ligne avec ces techniques simples.</p>
+            <button onclick="window.location.href='article.html'">Lire l'article</button>
+        </div>
+        <div class="cours-card">
+            <h3>Introduction au SEO</h3>
+            <p>Apprenez à optimiser votre site pour les moteurs de recherche.</p>
+            <button onclick="window.location.href='article.html'">Lire l'article</button>
+        </div>
+        <div class="cours-card">
+            <h3>Comment débuter en trading crypto</h3>
+            <p>Les bases pour commencer à investir et trader en toute sécurité.</p>
+            <button onclick="window.location.href='article.html'">Lire l'article</button>
+        </div>
+    </div>
+</section>
+
+<footer>
+    <p>&copy; 2025 DTech. Tous droits réservés.</p>
+</footer>
+</body>
+</html>
 
