Add course detail page for Marketing Digital

--- a/cours/cours-detail.html
+++ b/cours/cours-detail.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>DTech - Détail du cours</title>
+  <link rel="stylesheet" href="../style.css">
+</head>
+<body>
+<header>
+  <div class="logo"><h1>DTech</h1></div>
+  <nav>
+    <a href="../index.html">Accueil</a>
+    <a href="../cours.html">Cours</a>
+    <a href="../blog.html">Blog</a>
+    <a href="../boutique.html">Boutique</a>
+    <a href="../a-propos.html">À propos</a>
+    <a href="../contact.html">Contact</a>
+    <a href="../dashboard.html">Connexion</a>
+  </nav>
+</header>
+
+<section class="section">
+  <h2>Marketing Digital - Débutant</h2>
+  <p>Découvrez comment attirer et fidéliser des clients grâce au marketing numérique.</p>
+
+  <h3>Plan du cours :</h3>
+  <ul>
+    <li>Introduction au marketing digital</li>
+    <li>Les canaux principaux : SEO, email, réseaux sociaux</li>
+    <li>Création d’une campagne marketing</li>
+  </ul>
+
+  <a href="../dashboard.html" class="btn">Commencer le cours</a>
+</section>
+
+<footer>
+  <p>&copy; 2025 DTech. Tous droits réservés.</p>
+</footer>
+</body>
+</html>
 
