Update course description and button to link

--- a/cours.html
+++ b/cours.html
@@ -24,8 +24,8 @@
     <div class="grid">
         <div class="cours-card">
             <h3>Marketing Digital</h3>
-            <p>Apprenez à attirer vos clients en ligne.</p>
-            <button onclick="window.location.href='cours-detail.html'">Voir le cours</button>
+            <p>Apprenez les bases du marketing digital pour booster votre présence en ligne.</p>
+            <a href="cours/cours-detail.html" class="btn">Voir le cours</a>
         </div>
         <div class="cours-card">
             <h3>Développement Web</h3>
@@ -44,7 +44,6 @@
         </div>
     </div>
 </section>
-
 <footer>
     <p>&copy; 2025 DTech. Tous droits réservés.</p>
 </footer>
