Add new article card for SEO introduction

--- a/blog.html
+++ b/blog.html
@@ -22,6 +22,11 @@
 <section class="section">
     <h2 style="text-align:center; margin-bottom:30px;">Articles récents</h2>
     <div class="grid">
+        <div class="article-card">
+            <h3>Introduction au SEO</h3>
+            <p>Découvrez les bases du référencement naturel pour améliorer votre visibilité.</p>
+            <a href="blog/article.html" class="btn">Lire l’article</a>
+        </div>
         <div class="cours-card">
             <h3>5 astuces pour réussir sur Instagram</h3>
             <p>Découvrez comment booster votre présence en ligne avec ces techniques simples.</p>
