Refactor course detail page layout and content

--- a/cours/cours-detail.html
+++ b/cours/cours-detail.html
@@ -2,40 +2,94 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>DTech - Détail du cours</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DTech - Détails du cours</title>
   <link rel="stylesheet" href="../style.css">
 </head>
+
 <body>
-<header>
-  <div class="logo"><h1>DTech</h1></div>
-  <nav>
-    <a href="../index.html">Accueil</a>
-    <a href="../cours.html">Cours</a>
-    <a href="../blog.html">Blog</a>
-    <a href="../boutique.html">Boutique</a>
-    <a href="../a-propos.html">À propos</a>
-    <a href="../contact.html">Contact</a>
-    <a href="../dashboard.html">Connexion</a>
-  </nav>
-</header>
 
-<section class="section">
-  <h2>Marketing Digital - Débutant</h2>
-  <p>Découvrez comment attirer et fidéliser des clients grâce au marketing numérique.</p>
+  <!-- HEADER -->
+  <header>
+    <div class="logo">
+      <h1>DTech</h1>
+    </div>
+    <nav>
+      <a href="../index.html">Accueil</a>
+      <a href="../cours.html" class="active">Cours</a>
+      <a href="../blog.html">Blog</a>
+      <a href="../boutique.html">Boutique</a>
+      <a href="../a-propos.html">À propos</a>
+      <a href="../contact.html">Contact</a>
+      <a href="../dashboard.html">Connexion</a>
+    </nav>
+  </header>
 
-  <h3>Plan du cours :</h3>
-  <ul>
-    <li>Introduction au marketing digital</li>
-    <li>Les canaux principaux : SEO, email, réseaux sociaux</li>
-    <li>Création d’une campagne marketing</li>
-  </ul>
+  <!-- HERO / TITRE DU COURS -->
+  <section class="course-hero">
+    <div class="container">
+      <h2>Formation : Les Fondamentaux du Marketing Digital</h2>
+      <p>Apprenez à développer votre présence en ligne, attirer plus de clients et vendre efficacement vos produits ou services grâce aux outils numériques.</p>
+      <a href="#inscription" class="btn">S'inscrire à ce cours</a>
+    </div>
+  </section>
 
-  <a href="../dashboard.html" class="btn">Commencer le cours</a>
-</section>
+  <!-- CONTENU DU COURS -->
+  <section class="section course-detail">
+    <div class="container">
+      <h3>📘 Présentation du cours</h3>
+      <p>
+        Cette formation vous guide pas à pas dans la découverte du marketing digital, de la création de contenu à la publicité en ligne.
+        Vous apprendrez à utiliser des outils puissants comme Canva, Google Ads, Meta Business Suite et Mailchimp pour développer votre activité.
+      </p>
 
-<footer>
-  <p>&copy; 2025 DTech. Tous droits réservés.</p>
-</footer>
+      <h3>📚 Contenu de la formation</h3>
+      <ul>
+        <li>Module 1 : Introduction au marketing digital</li>
+        <li>Module 2 : Stratégies de contenu et branding</li>
+        <li>Module 3 : Publicité sur les réseaux sociaux (Facebook & Instagram Ads)</li>
+        <li>Module 4 : Email marketing et automatisation</li>
+        <li>Module 5 : SEO et référencement naturel</li>
+        <li>Module 6 : Analyse des performances et optimisation</li>
+      </ul>
+
+      <h3>⏱️ Durée & Format</h3>
+      <p>
+        <strong>Durée :</strong> 4 semaines (12h de formation pratique)<br>
+        <strong>Format :</strong> En ligne (Google Meet & WhatsApp) + Support PDF + Exercices pratiques.
+      </p>
+
+      <h3>👨‍🏫 Formateur</h3>
+      <div class="formateur">
+        <img src="../images/claude-ulaluka.jpg" alt="Formateur Claude Ulaluka">
+        <div>
+          <p><strong>Claude Ulaluka</strong> — Coach DTech</p>
+          <p>Technicien en informatique, entrepreneur digital et formateur spécialisé en marketing numérique et intelligence artificielle.</p>
+        </div>
+      </div>
+
+      <h3>🎯 Objectifs d'apprentissage</h3>
+      <ul>
+        <li>Comprendre les bases du marketing digital moderne</li>
+        <li>Créer une stratégie efficace pour développer votre marque en ligne</li>
+        <li>Maîtriser les outils essentiels pour la publicité et la communication digitale</li>
+        <li>Optimiser votre visibilité et vos ventes grâce au SEO et à l’e-mailing</li>
+      </ul>
+
+      <h3 id="inscription">📩 Inscription</h3>
+      <p>
+        Pour vous inscrire à ce cours, remplissez le formulaire d’inscription ou contactez directement notre équipe via WhatsApp :
+      </p>
+
+      <a href="https://wa.me/243818238660?text=Bonjour%20DTech,%20je%20souhaite%20m'inscrire%20à%20la%20formation%20Marketing%20Digital" target="_blank" class="btn btn-whatsapp">📱 S’inscrire via WhatsApp</a>
+      <a href="../cours.html" class="btn btn-secondary">← Retour aux cours</a>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>&copy; 2025 DTech. Tous droits réservés. | Conçu par Claude Ulaluka</p>
+  </footer>
+
 </body>
 </html>
-
