Add testimonials and trainers sections to index.html

--- a/index.html
+++ b/index.html
@@ -50,11 +50,45 @@
         <h2>Pourquoi choisir DTech ?</h2>
         <p>Contenu de qualité, certifié, flexible et accessible à tous.</p>
     </section>
-
-    <section class="section" id="temoignages" style="text-align:center;">
-        <h2>Témoignages</h2>
-        <p>"Les cours de DTech m'ont aidé à lancer mon entreprise digitale !" - Jean M.</p>
-    </section>
+   <!-- ======= SECTION TÉMOIGNAGES ======= -->
+<section class="section" id="temoignages">
+  <h2>💬 Témoignages d’apprenants</h2>
+  <div class="cours-grid">
+    <div class="cours-card">
+      <p>“La formation en marketing digital de DTech m’a permis de lancer ma première boutique en ligne ! Merci pour la pédagogie et la clarté des cours.”</p>
+      <h4>— Sandra M., Kinshasa</h4>
+    </div>
+    <div class="cours-card">
+      <p>“J’ai découvert les outils d’automatisation grâce à DTech. Aujourd’hui, je gère mes campagnes email comme un pro !”</p>
+      <h4>— Joseph K., Abidjan</h4>
+    </div>
+    <div class="cours-card">
+      <p>“Super expérience ! Les formateurs sont disponibles et le contenu est très complet. Je recommande à 100 %.”</p>
+      <h4>— Grâce N., Lubumbashi</h4>
+    </div>
+  </div>
+</section>
+<!-- ======= SECTION FORMATEURS ======= -->
+<section class="section" id="formateurs">
+  <h2>👨‍🏫 Nos formateurs</h2>
+  <div class="cours-grid">
+    <div class="cours-card">
+      <img src="https://via.placeholder.com/150" alt="Formateur 1" style="border-radius:50%;width:100px;height:100px;object-fit:cover;margin-bottom:10px;">
+      <h3>Claude Ulaluka</h3>
+      <p>Fondateur de DTech et formateur principal. Spécialiste en marketing digital, réseaux et intelligence artificielle.</p>
+    </div>
+    <div class="cours-card">
+      <img src="https://via.placeholder.com/150" alt="Formateur 2" style="border-radius:50%;width:100px;height:100px;object-fit:cover;margin-bottom:10px;">
+      <h3>Prisca L.</h3>
+      <p>Experte en création de contenu et stratégie de marque. Aide les entrepreneurs à développer leur visibilité en ligne.</p>
+    </div>
+    <div class="cours-card">
+      <img src="https://via.placeholder.com/150" alt="Formateur 3" style="border-radius:50%;width:100px;height:100px;object-fit:cover;margin-bottom:10px;">
+      <h3>Patrick D.</h3>
+      <p>Consultant en SEO et référencement web. Passionné par l’optimisation et la performance des sites internet.</p>
+    </div>
+  </div>
+</section>
 
     <footer>
         <p>&copy; 2025 DTech. Tous droits réservés.</p>
